correction bug slide caroussel (nb slideVisibles) + design responsive <360px width

--- a/style.css
+++ b/style.css
@@ -11,8 +11,7 @@ body {
 nav{
   width: auto;
   height: 60px;
-  background-color: #80ffd4;
-  background: linear-gradient(0deg, rgba(128,255,212,1) 95%, rgba(0,0,0,0) 100%);
+  background: linear-gradient(0deg, rgba(255,98,98,1) 95%, rgba(0,0,0,0) 100%);
   align-items: center;
   display: flex;
 }
@@ -24,7 +23,8 @@ nav img{
 nav a{
   text-decoration: none; 
   margin: 10px;
-  color: #000;
+  color: #fff;
+  text-shadow: 2px 2px 2px red, 0 0 1em darkred, 0 0 0.2em indianred;
 }
 nav a:hover{
   text-decoration: underline;
@@ -33,12 +33,12 @@ nav a:hover{
 /* SECTION TOPMOVIE */
 #the-movie{
   width: auto;
-  height: 500px;
-  background: linear-gradient(180deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 2%, rgba(0,0,0,1) 85%, rgba(0,0,0,0) 100%);
-}
+  height: 700px;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5) 90%, rgba(34, 34, 34, 1) 100%),
+                    url(img/fond_top_movie.png);}
 #the-movie div{
   margin-bottom: 3%;
-  padding: 30px;
+  padding: 5%;
 }
 #the-movie img{
   height: auto;
@@ -60,6 +60,7 @@ section h2{
 .container{
   width: 70%;
   margin-bottom: 80px;
+  border-block-end: 1rem solid #999;
 }
 .carousel{ 
   width: 90%;
@@ -76,7 +77,7 @@ section h2{
   padding: 3px;
   margin-left: 5px;
   margin-right: 5px;
-  opacity: 0.6;
+  opacity: 0.9;
   width: 25%;
   height: auto;
   background-color: #000;
@@ -86,12 +87,19 @@ section h2{
 }
 .movie:hover{
   opacity: 1;
-  transform: ro(0.9);
 }
 
 .movie img{
-  width: 100%;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
   height: auto;
+  transition: transform 0.3s;
+  display: block;
+}
+.movie img:hover{
+
+  transform: scale(1.1);
 }
 
 .btn_next{
@@ -137,9 +145,8 @@ section h2{
   margin-left: -50px;
   width: auto;
   height: auto;
-  color: #350075;
+  color: #222;
 }
-
 #modale_container {
   width: 500px;
   height: auto;
@@ -159,6 +166,7 @@ section h2{
   -ms-transform: translate(-50%, -50%);
   -webkit-transform: translate(-50%, -50%);
 }
+
 
 #img_infos{
   margin: 40px;
@@ -186,4 +194,54 @@ section h2{
 span{
   font-weight: bold;
   color: black;
+}
+
+
+/* Adaptative design for smartphone */
+@media screen and (max-width: 360px) {
+  #modale {
+  width: 79%;
+top: 14%;
+left: 1%;
+margin-top: 95px;
+margin-left: 173px;
+}
+#modale_container {
+    color: #222;
+    height: auto;
+    text-align: left;
+    font-size: 11px;
+    width: 100%;
+    top: 1%;
+    left: 1%;
+}
+#img_infos{
+  margin: 5px;
+  margin-top: 40px;
+  float: right;
+  border: 2px solid black;
+  width: 20%;
+}
+
+#close{
+  position: absolute;
+  right: 5px;
+  color: #fff;
+  background: #000;
+  width: 30px;
+  height: 30px;
+  font-size: 25px;
+  font-weight: bold;
+  text-align: center;
+  border-radius: 40%;
+}
+#close:hover{
+  color: red;
+
+}
+
+span{
+  font-weight: bold;
+  color: black;
+}
 }
